ecmascript/parser/tests/test262-error-references/fail/3f9ce9123e9ea7cb.js.stderr
error: Unexpected token `.`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/3f9ce9123e9ea7cb.js:1:14
  |
1 | function a([a.b]) {}
  |              ^

